[tool.poetry]
name = "poetryproject"
version = "0.1.0"
description = ""
authors = ["DESKTOP-FEDOR <pichuginf2016@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
